--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link href="https://fonts.googleapis.com/css?family=Gruppo|Miriam+Libre&display=swap" rel="stylesheet">
     </head>
   <body>
-      <div class="header-container">
+      <div class="header">
           <div class="header-image-holder">
                 <div class="navigation">
                         <ul>
@@ -40,12 +40,105 @@
           <script src="assets/js/combined.js"></script>
         </div>    
       </div>
-      
+      <div class="container">
+        <div class="serv-row">               
+            <h2 class="service-header"><a href="#" class="service-link">SERVICES</a></h2>                    
+          <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="services-container">               
+              
+           <div class="service-name">
+            <i class="fas fa-shopping-basket"></i>
+            <h3><a href="#" class="service-link">E-Commerce</a></h3>
+            <p><a href="#" class="service-link">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</a></p>
+           </div>   
+           <div class="service-name">
+            <i class="fas fa-laptop"></i>
+            <h3><a href="#" class="service-link">Responsive Web</a></h3>
+            <p><a href="#" class="service-link">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</a></p>
+           </div>
+           <div class="service-name">
+            <i class="fas fa-lock"></i>
+            <h3><a href="#" class="service-link">Web Security</a></h3>
+            <p><a href="#" class="service-link">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </a></p>
+           </div>
+      </div>         
+</div>
+
+<div class="portfolio-container">
+<div class="portfolio">
+<div class="wrapper">
+<h2 class="portfolio-header">OUR PORTFOLIO</h2>
+<p class="portfolio-par">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+</div>
+<div class="holder">
+<div class="holder1">
+<div class="portfolio-img-holder">
+<img src="https://i.imgur.com/O4ZEBbi.png" alt="image"/>
+<div class="port-wrapper">
+<a href="#" class="service-link"><h3>Ebony & Ivory</h3></a>
+<a href="#" class="service-link"><h4>Branding</h4></a>
+</div>
+</div>
+<div class="portfolio-img-holder">
+<img src="https://i.imgur.com/b5qezxW.png" alt="image"/>
+<div class="port-wrapper">
+    <h3><a href="#" class="service-link">Smart Stationary</a></h3>
+    <h4><a href="#" class="service-link">Print Design</a></h4>
+</div></div>
+<div class="portfolio-img-holder">
+<img src="https://i.imgur.com/jQamrVM.png" alt="image"/>
+<div class="port-wrapper">   
+    <a href="#" class="service-link"><h3>Clever Poster</h3></a>
+    <a href="#" class="service-link"><h4>Print Design</h4></a>
+</div>
+</div>
+</div>
+<div class="holder2">
+<div class="portfolio-img-holder">
+<img src="https://i.imgur.com/VW6CMlP.png" alt="image"/>
+<div class="port-wrapper">
+    <a href="#" class="service-link"> <h3>Vinyl Record</h3></a>
+    <a href="#" class="service-link"><h4>Product Mock-Up</h4></a>
+</div>
+</div>
+<div class="portfolio-img-holder">
+<img src="https://i.imgur.com/oNLcoX0.png" alt="image"/>
+<div class="port-wrapper">
+    <a href="#" class="service-link"> <h3>Treehouse Template</h3></a>
+    <a href="#" class="service-link"><h4>Web Design</h4></a>
+</div>
+</div>
+<div class="portfolio-img-holder">
+<img src="https://i.imgur.com/byTIjXA.png" alt="image"/>
+<div class="port-wrapper">
+    <a href="#" class="service-link"><h3>Burned Logo</h3></a>
+    <a href="#" class="service-link"><h4>Branding</h4></a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="container">
+    <div class="container-footer">
+        <div class="copyright">
+            <p class="footer-par"><i class="far fa-copyright copy"></i>Copyright 2014 FreebiesXpress.com</p>
+        </div>
+        <div class="media">
+            <ul class="list-inline">
+                <li class="list-inline-item"><a class="social-button twitter" href="#"><i class="fab fa-twitter mediaicon"></i></a></li>
+                <li class="list-inline-item"><a class="social-button facebook" href="#"><i class="fab fa-facebook-f mediaicon"></i></a></li>
+                <li class="list-inline-item"><a class="social-button pinterest" href="#"><i class="fab fa-pinterest-p mediaicon"></i></a></li>
+                <li class="list-inline-item"> <a class="social-button google-plus" href="#"><i class="fab fa-google-plus-g mediaicon"></i></a></li>
+              </ul>
+        </div>
+    </div>
+
+</div>
+</body>
+</html>
  
-
-
-
-
 
 
 
